--- a/public/css/my.css
+++ b/public/css/my.css
@@ -4,6 +4,7 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 20px;
 }
 @media (min-width: 768px) {
   .container {
@@ -40,4 +41,18 @@
   justify-content: flex-end;
   text-align: right;
   padding-right: 35px;
+}
+.withe-black{
+  color: #222;
+}
+.margin-top{
+  margin-top: 20px;
+}
+
+.link button[type="submit"]{
+  background-color: transparent;
+  border:none;
+  color: red;
+  text-transform: none;
+  text-decoration: underline;
 }
