--- a/viewstr/app/imagenes/new.pug
+++ b/viewstr/app/imagenes/new.pug
@@ -6,13 +6,14 @@ block contenido
   br
   br
   h1(class="texto-center") Suba la imagen
-  form( action="/app/imagenes", method="post", class="texto-center container-form") 
+  form( action="/app/imagenes", method="post",enctype="multipart/form-data", class="texto-center container-form") 
     div(class="mdl-textfield mdl-js-textfield")        
-        input(type="text", name="nombre", placeholder="nombre de la imagen", id="title", class="mdl-textfield__input")
-        label(for="title", class="mdl-textfield__label") Titulo  
+        input(type="text", name="titulo", placeholder="nombre de la imagen", id="titulo", class="mdl-textfield__input")
+        label(for="titulo", class="mdl-textfield__label") Titulo  
     br   
     div(class="mdl-textfield mdl-js-textfield")     
-      input(type="file", name="imagen", placeholder="< seleccione la imagen", id="imagen", class="mdl-textfield__input")
+      input(type="file", name="imagen", placeholder="< seleccione la imagen",
+       id="imagen", class="mdl-textfield__input")
       label(for="imagen", class="mdl-textfield__label") Buscar:
       
     div(class="right")  
